@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-28
-Date: 2010-04-7
+Version: 0.95-29
+Date: 2010-04-8
 Author: Martin Elff
 Maintainer: Martin Elff <melff@essex.ac.uk>
 Description: One of the aims of this package is to make life easier for
@@ -20,6 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/software/memisc/
-Packaged: 2010-04-07 17:59:50 UTC; elff
+Packaged: 2010-04-08 10:31:40 UTC; elff
 Repository: CRAN
-Date/Publication: 2010-04-08 06:08:12
+Date/Publication: 2010-04-08 15:52:15
