@@ -1,3 +1,13 @@
+2010-04-08:
+  - fixed bug in 'cases'. It works now with target expressions even with 'within'.
+  - 'write.mtable' now handles a 'forLaTeX=TRUE' option in a more convenient way.
+  - 'mtable' now handles objects of classes "polr" and "simex", thanks to a contribution
+    from Christopher N. Lawrence (Texas A&M International University)
+  - support for 'mtable' output for "glm" objects with exponentiated coefficients
+    and prelininary support for "lmer" object added, thanks to a contribution from
+    Dave Atkins (Unversity of Washington). Also the coef.styles are changed to be
+    more convenient.
+
 2010-04-07:
   - fixed bug in C-level function 'read_sysfile_subset' that caused spurious errors
     while importing SPSS 'system' files with long strings.
